@@ -30,9 +30,10 @@ __PACKAGE__->add_column(
 This helper allows you to specify column information by passing a
 [Type::Tiny](https://metacpan.org/pod/Type::Tiny) object.
 
-Note that this _does not_ enforce that the data is of that type. It
-just allows you to use types as a shorthand for specifying the column
-type.
+Note that this _does not_ enforce that the data is of that type,
+unless you specify the `strict` option (See ["set\_column"](#set_column)).  The
+main purpose of this is to allow you to use types as a shorthand for
+specifying the column type.
 
 You can use types from [Types::SQL](https://metacpan.org/pod/Types::SQL) or supported types from
 [Types::Standard](https://metacpan.org/pod/Types::Standard).
@@ -47,6 +48,22 @@ These methods are modified to allow you to specify the column info
 using the `isa` attribute and a [Type::Tiny](https://metacpan.org/pod/Type::Tiny) type.
 
 Note that in no way does this enforce that type.
+
+## `set_column`
+
+If the `strict` attribute is specified for the column, then the type
+constraint will be enforced when the column is explicitly set.
+
+If the `coerce` attribute is also specified, then a coercion will be
+applied before checking the constraint.
+
+Note that type constraints will not be enforced if you use the
+`insert` or resultset `create` methods.
+
+# KNOWN ISSUES
+
+Strict type constraints are only applied when explicitly setting a
+column value.
 
 # ROADMAP
 
