@@ -8,7 +8,7 @@ use strict;
 use warnings;
 
 use Ref::Util ();
-use Safe::Isa qw/ $_isa /;
+use Safe::Isa 1.000008 qw/ $_isa $_can $_call_if_can /;
 use Types::SQL::Util v0.3.0 ();
 
 # RECOMMEND PREREQ: Ref::Util::XS
@@ -47,9 +47,10 @@ In result class:
 This helper allows you to specify column information by passing a
 L<Type::Tiny> object.
 
-Note that this I<does not> enforce that the data is of that type. It
-just allows you to use types as a shorthand for specifying the column
-type.
+Note that this I<does not> enforce that the data is of that type,
+unless you specify the C<strict> option (See L</set_column>).  The
+main purpose of this is to allow you to use types as a shorthand for
+specifying the column type.
 
 You can use types from L<Types::SQL> or supported types from
 L<Types::Standard>.
@@ -92,7 +93,44 @@ sub _apply_types_to_column_defition {
     return \%info;
 }
 
+=method C<set_column>
+
+If the C<strict> attribute is specified for the column, then the type
+constraint will be enforced when the column is explicitly set.
+
+If the C<coerce> attribute is also specified, then a coercion will be
+applied before checking the constraint.
+
+Note that type constraints will not be enforced if you use the
+C<insert> or resultset C<create> methods.
+
+=cut
+
+sub set_column {
+    my ($self, $column, $new_value) = @_;
+
+    if (my $info = $self->result_source->column_info($column)) {
+
+        if ((my $type = $info->{isa}) && $info->{strict}) {
+
+            if ($info->{coerce} && $type->$_can('coerce')) {
+                $new_value = $type->coerce($new_value);
+            }
+
+            $type->$_call_if_can( assert_valid => $new_value );
+        }
+
+    }
+
+    return $self->next::method( $column => $new_value );
+}
+
 1;
+
+=head1 KNOWN ISSUES
+
+Strict type constraints are only applied when explicitly setting a
+column value.
 
 =head1 ROADMAP
 
